--- a/500.html
+++ b/500.html
@@ -1,4 +1,5 @@
 <html lang="en">
+<!--nginx 정적 에러페이지-->
   <head>
     <meta name="emotion-insertion-point" content="" />
     <meta charset="UTF-8" />
