refactor : theme에서 fontStyle 직접 가져오는 것 수정 refactor : navigation 에 ETC 메뉴 추가 refactor : 필요한 폰트만 preload

--- a/500.html
+++ b/500.html
@@ -109,42 +109,42 @@
 
       @font-face {
         font-family: "KOPUB Batang light";
-        src: url("/src/assets/font/koPub/KoPub Batang_Pro Light.otf")
+        src: url("/src/assets/font/koPub/KoPubBatang_ProLight.otf")
           format("opentype");
         font-weight: 300;
       }
 
       @font-face {
         font-family: "KOPUB Batang medium";
-        src: url("/src/assets/font/koPub/KoPub Batang_Pro Medium.otf")
+        src: url("/src/assets/font/koPub/KoPubBatang_ProMedium.otf")
           format("opentype");
         font-weight: 500;
       }
 
       @font-face {
         font-family: "KOPUB Batang bold";
-        src: url("/src/assets/font/koPub/KoPub Batang_Pro Bold.otf")
+        src: url("/src/assets/font/koPub/KoPubBatang_ProBold.otf")
           format("opentype");
         font-weight: 600;
       }
 
       @font-face {
         font-family: "KOPUB Dotum light";
-        src: url("/src/assets/font/koPub/KoPub Dotum_Pro Light.otf")
+        src: url("/src/assets/font/koPub/KoPubDotum_ProLight.otf")
           format("opentype");
         font-weight: 300;
       }
 
       @font-face {
         font-family: "KOPUB Dotum medium";
-        src: url("/src/assets/font/koPub/KoPub Dotum_Pro Medium.otf")
+        src: url("/src/assets/font/koPub/KoPubDotum_ProMedium.otf")
           format("opentype");
         font-weight: 500;
       }
 
       @font-face {
         font-family: "KOPUB Dotum bold";
-        src: url("/src/assets/font/koPub/KoPub Dotum_Pro Bold.otf")
+        src: url("/src/assets/font/koPub/KoPubDotum_ProBold.otf")
           format("opentype");
         font-weight: 600;
       }
