--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     />
 
     <title>AnyCast</title>
+    <meta name="description" content="We provide any video without any restrictions.">
   </head>
   <body>
     <div id="root"></div>
