refactor : 이름 변경 AnyCast -> anycast

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       rel="stylesheet"
     />
 
-    <title>AnyCast</title>
+    <title>anycast</title>
     <meta
       name="description"
       content="We provide any video without any restrictions."
